--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+.dark-mode {
+    background-color: #222;
+    color: #fff;
+  }
+  
+  .dark-mode .navbar {
+    background-color: #222;
+    color: #fff;
+  }
+    
+  .dark-mode .card {
+    background-color: #333;
+    color: #fff;
+  }
+  
+  .dark-mode .card {
+    background-color: #333;
+    color: #fff;
+  }
+  .home-section {
+    background-color: #f0f0f0;
+  }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  .btn-close-bottom-right {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    transform: translate(-50%, 50%);
+  }
+  .nav-item:hover a {
+    color: #fff; /* Cambia el color del texto al pasar el mouse por encima */
+    font-weight: bold; /* Aumenta el peso de la fuente al pasar el mouse por encima */
+  }
+  
+  .arrow {
+    width: 20px;
+    height: 2px;
+    background-color: #000;
+    margin: 0 auto;
+  }
+  
+  .col:not(:last-child) .arrow {
+    margin-bottom: 20px;
+  }
+  .card-link:hover .card {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  }
+  
+  .card-link:hover .card-img-top {
+    /* Agrega aquí cualquier efecto o animación adicional que desees */
+  }
+  .enlarge-text {
+    font-size: 1em;
+    transition: font-size 0.3s ease;
+  }
+  
+  .enlarge-text:hover {
+    font-size: 1.1em;
+  }
