--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,25 @@
   .enlarge-text:hover {
     font-size: 1.1em;
   }
+
+  /* para el spinner */
+
+  .video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+  }
+  
+  .spinner-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.5);
+  }
+
+  
